Fixed some layout bugs

--- a/src/components/layout/style.module.css
+++ b/src/components/layout/style.module.css
@@ -13,13 +13,17 @@
     margin: 1rem 0;
 }
 
-@media screen and (max-width: 1024px) {
-    .main {
-        margin: 1rem 0.75rem 1rem;
-    }
 
-    .footer {
-        margin: 0 0.75rem 0.5rem;
+.main {
+    margin: 0 0.75rem 1rem;
+    @media screen and (min-width: 1024px) {
+        margin: 0;
     }
 }
 
+.footer {
+    margin: 0 0.75rem 0.5rem;
+    @media screen and (min-width: 1024px) {
+        margin: 0;
+    }
+}
